Fixed video display on mobile

--- a/projects/projectStyles.css
+++ b/projects/projectStyles.css
@@ -101,6 +101,11 @@ section {
     max-width: 350px;
     border-radius: 8px;
   }
+
+  .gallery-item video {
+    max-width: 350px;
+    border-radius: 8px;
+  }
   
   @media (max-width:600px){
     .gallery-grid {
@@ -112,6 +117,9 @@ section {
 
     .gallery-item img {
       max-width: -webkit-fill-available;
-      border-radius: 8px;
+    }
+
+    .gallery-item video {
+      max-width: -webkit-fill-available;
     }
   }
